Fixed spacings and added basic validation
Fixed spacings, unnecessary code, and added basic validation to the
register / login page.

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,4 @@
+/*White body that spans the whole screen height*/
 html,body {
   height: 100%;
 }
@@ -19,12 +20,6 @@ body {
 
 .fill {
     min-height: 100%;
-}
-
-/*Bootstrap - Same height grids*/
-.row.is-flex {
-  display: flex;
-  flex-wrap: wrap;
 }
 
 /*Portrait Phones*/
@@ -50,73 +45,74 @@ body {
     }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
-  /*Search Bar*/
-  .search-bar {
-    width: 290px;
-    margin: 0 auto;
+/*Portrait Phones to Tablets*/
+@media (max-width: 1050px) {
+  /*Navbar - Change where navbar breaks*/
+  .navbar-header {
+      float: none;
+  }
+
+  .navbar-left,.navbar-right {
+      float: none !important;
+  }
+
+  .navbar-toggle {
+      display: block;
+  }
+
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+      text-align: center;
+  }
+
+  .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+  }
+
+  .navbar-collapse.collapse {
+      display: none !important;
+  }
+
+  .navbar-nav {
+      float: none !important;
+      margin-top: 7.5px;
+  }
+
+  .navbar-nav>li {
+      float: none;
+  }
+
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+
+  .collapse.in {
+      display:block !important;
   }
 }
 
 /*Tablets*/
 @media (max-width: 1199px) {
-    /*Navbar - Change where navbar breaks*/
-    .navbar-header {
-        float: none;
-    }
-
-    .navbar-left,.navbar-right {
-        float: none !important;
-    }
-
-    .navbar-toggle {
-        display: block;
-    }
-
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-        text-align: center;
-    }
-
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-
-    .navbar-collapse.collapse {
-        display: none !important;
-    }
-
-    .navbar-nav {
-        float: none !important;
-        margin-top: 7.5px;
-    }
-
-    .navbar-nav>li {
-        float: none;
-    }
-
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-
-    .collapse.in {
-        display:block !important;
-    }
-
-    /*Well Style*/
-    .well-1 {
-      margin: 0 -10px 10px;
-    }
+  /*Well Style*/
+  .well-1 {
+    margin: 0 -10px 10px;
+  }
 }
 
-@media (min-width: 767px) {
+/*Tablets and above*/
+@media (min-width: 768px) {
   /*Listing Tile - Change Font Size*/
   #product-listing-title {
     font-size: 2em;
   }
+}
+
+/*Background Colours*/
+.white-background {
+  background: white;
 }
 
 /*Image - Image size to follow grid size*/
@@ -131,7 +127,7 @@ img {
   margin: 0 auto;
 }
 
-/*Center Item Vertically*/
+/*Position Item Vertically*/
 .vertical-parent {
   position: relative;
 }
@@ -143,15 +139,33 @@ img {
   transform: translate(-50%, -50%);
 }
 
+/*Center Item Vertically*/
+.vertical-child-center {
+  position: absolute;
+  height: 10%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  padding: 0 20px;
+}
+
 /*Center Item Horizontally*/
 .center-item-horizontally {
   margin: 0 auto;
   float: none;
 }
 
+/*Bootstrap - Same height grids*/
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 /*Well Styles*/
-.white-background {
-  background: white;
+.well {
+  height: 96%;
 }
 
 .well-left {
